--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -19,10 +19,8 @@ dependencies {
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.3'
 	implementation 'com.h2database:h2'
 	runtimeOnly 'mysql:mysql-connector-java'
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-		//exclude 
-	}
+	testImplementation 'junit:junit:4.12'
+	
 
 }
 
