--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "CodeLens (Launch) - DateServiceTest",
+            "request": "launch",
+            "mainClass": "com.example.demo.ServiceTest.DateServiceTest",
+            "projectName": "demo"
+        },
+        {
+            "type": "java",
             "name": "CodeLens (Launch) - AppTestConfiguration",
             "request": "launch",
             "mainClass": "com.example.demo.AppTestConfiguration",
