--- a/demo/bin/test/tests.properties
+++ b/demo/bin/test/tests.properties
@@ -1,7 +1,7 @@
-
-
+###;DB__CLOSE__DELAY=-1###
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:~/test:;DB_CLOSE_ON_EXIT=TRUE;MODE=MySQL
+spring.datasource.url=jdbc:h2:~/test
 spring.datasource.username=sa
 spring.datasource.password=
 
+spring.h2.console.enabled=true
