--- a/demo/src/test/resources/tests.properties
+++ b/demo/src/test/resources/tests.properties
@@ -1,7 +1,10 @@
 ###;DB__CLOSE__DELAY=-1###
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:~/test
+spring.datasource.url=jdbc:h2:mem:test
 spring.datasource.username=sa
 spring.datasource.password=
 
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.trace=false
+spring.h2.console.settings.web-allow-others=false
