--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -20,7 +20,7 @@ dependencies {
 	implementation 'com.h2database:h2'
 	runtimeOnly 'mysql:mysql-connector-java'
 	testImplementation 'junit:junit:4.12'
-	
+    testCompile 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.1.0'
 
 }
 
