--- a/demo/src/test/resources/tests.properties
+++ b/demo/src/test/resources/tests.properties
@@ -1,10 +1,10 @@
 ###;DB__CLOSE__DELAY=-1###
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:test
+spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER = false;INIT = CREATE SCHEMA IF NOT EXISTS tester\\;RUNSCRIPT FROM 'demo/src/test/resources/testschema.sql'
 spring.datasource.username=sa
 spring.datasource.password=
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-spring.h2.console.settings.trace=false
-spring.h2.console.settings.web-allow-others=false
+#spring.h2.console.settings.trace=false
+#spring.h2.console.settings.web-allow-others=false
