--- a/demo/src/test/resources/tests.properties
+++ b/demo/src/test/resources/tests.properties
@@ -1,6 +1,10 @@
 ###;DB__CLOSE__DELAY=-1###
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;DATABASE_TO_UPPER = false;INIT = CREATE SCHEMA IF NOT EXISTS tester\\;RUNSCRIPT FROM 'demo/src/test/resources/testschema.sql'
+spring.datasource.url=jdbc:h2:mem:test
+;DB_CLOSE_DELAY=-1
+;MODE=MySQL
+;DATABASE_TO_LOWER=TRUE
+;INIT=RUNSCRIPT FROM 'resources/testschema.sql'\\;RUNSCRIPT FROM 'resource/testdata'
 spring.datasource.username=sa
 spring.datasource.password=
 
