--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -17,9 +17,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.3'
-	implementation 'com.h2database:h2'
+	testCompile ('com.h2database:h2')
 	runtimeOnly 'mysql:mysql-connector-java'
 	testImplementation 'junit:junit:4.12'
+	testCompile ('org.springframework.boot:spring-boot-starter-data-jpa')
     testCompile 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.1.0'
 
 }
