--- a/demo/bin/test/tests.properties
+++ b/demo/bin/test/tests.properties
@@ -1,10 +1,6 @@
 ###;DB__CLOSE__DELAY=-1###
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:test
-;DB_CLOSE_DELAY=-1
-;MODE=MySQL
-;DATABASE_TO_LOWER=TRUE
-;INIT=RUNSCRIPT FROM 'resources/testschema.sql'\\;RUNSCRIPT FROM 'resource/testdata'
+spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1;MODE=MySQL;DATABASE_TO_LOWER=TRUE;INIT=RUNSCRIPT FROM 'resources/testschema.sql'\;RUNSCRIPT FROM 'resource/testdata.sql'
 spring.datasource.username=sa
 spring.datasource.password=
 
