--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -17,11 +17,9 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.3'
-	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'mysql:mysql-connector-java'
 	testImplementation 'junit:junit:4.12'
-	
-    testCompile 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.1.0'
+    testCompile ('org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.1.3')
 
 }
 
