--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -18,8 +18,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.3'
 	runtimeOnly 'mysql:mysql-connector-java'
-	testImplementation 'junit:junit:4.12'
     testCompile ('org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.1.3')
+	testImplementation ('org.springframework.boot:spring-boot-starter-test'){
+		exclude group: 'junit', module: 'junit'
+	}
 
 }
 
