--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -21,7 +21,7 @@ dependencies {
     testCompile ('org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.1.3')
 	testImplementation ('org.springframework.boot:spring-boot-starter-test'){
 		exclude group: 'junit', module: 'junit'
-	}
+    testImplementation 'org.hamcrest:hamcrest:2.2'
 
 }
 
