--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -16,13 +16,14 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.3'
 	runtimeOnly 'mysql:mysql-connector-java'
     testCompile ('org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.1.3')
 	testImplementation ('org.springframework.boot:spring-boot-starter-test'){
 		exclude group: 'junit', module: 'junit'
     testImplementation 'org.hamcrest:hamcrest:2.2'
-
+    }
 }
 
 test {
