--- a/days/build.gradle
+++ b/days/build.gradle
@@ -17,6 +17,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.1.3'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	compile ('com.h2database:h2')
 	runtimeOnly 'mysql:mysql-connector-java'
 	testImplementation'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.hamcrest:hamcrest:2.2'
