--- a/days/build.gradle
+++ b/days/build.gradle
@@ -19,6 +19,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	compile ('com.h2database:h2')
 	runtimeOnly 'mysql:mysql-connector-java'
+	testImplementation('org.mybatis.spring.boot:mybatis-spring-boot-starter-test:1.3.2')
 	testImplementation'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.hamcrest:hamcrest:2.2'
 	
