h2インメモリDBへ変更

--- a/days/src/main/resources/application.properties
+++ b/days/src/main/resources/application.properties
@@ -1,4 +1,16 @@
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/calendar?serverTimezone=JST
-spring.datasource.username=sho
-spring.datasource.password=dangomushi3
+spring.datasource.driverClassName=org.h2.Driver
+
+spring.datasource.url=jdbc:h2:mem:calendar;MODE=MySQL
+
+spring.datasource.username=root
+spring.datasource.password=
+
+
+#コンソール使用可能
+spring.h2.console.enabled=true
+
+
+#com.mysql.cj.jdbc.Driver
+#jdbc:mysql://localhost:3306/calendar?serverTimezone=JST
+#sho
+#dangomushi3
